# examples

android/ndk-rust/: BUILD.bazel  README.md  WORKSPACE  platform_mappings
android/ndk-rust/app/src/main/: AndroidManifest.xml
android/ndk-rust/app/src/main/java/com/example/android/: BUILD.bazel  JNICallback.java  MainActivity.java
android/ndk-rust/app/src/main/res/values/: themes.xml
android/ndk-rust/jni/: BUILD.bazel
android/ndk-rust/jni/src/: lib.rs
