package(default_visibility = ["//visibility:public"])

load("@rules_rust//rust:defs.bzl", "rust_library")

deps = [
    "//third_party/cargo:jni"
]

srcs = glob(["src/**"])

# Use the same name for the label as parent folder because libndk_rust.so is what is actually
# put into the android APK, regardless of the name value here.
rust_library(
    name = "ndk_rust",
    deps = deps,
    srcs = srcs,
)
